# faiss

./: .gitignore  CMakeLists.txt  build.sh  env.sh
faiss/gpu/: GpuIndex.cu
perf/: add_var.py  gpu_memory.hpp  memory.csv  visualize_latency.py  visualize_latency_nb.py  visualize_latency_nq.py  visualize_repeated.py
perf/old_plots/: 4-GPU-flat-rep_dim_128_nb_1000000_k_4_latencies.csv
perf/perf-1-Flat/: 1-Flat-Test  1-Flat-repeated-same.cpp  1-Flat-repeated.cpp  1-Flat-test-nb.cpp  1-Flat-test-same.cpp  1-Flat-test.cpp  1-Flat-warmup  1-Flat-warmup.cpp  1-Flat_warmup_dim_128_batch_10000_k_4_latencies.csv  1-Flat_warmup_dim_960_batch_100000_k_4_latencies.csv  build.sh  run.sh  run_repeated.sh  run_repeated_same.sh  run_test.sh  run_test_same.sh  run_vary_nb.sh  visualize_latency.py  visualize_warmup.py
perf/perf-2-IVFFlat/: 2-IVFFlat-Test  2-IVFFlat-repeated.cpp  2-IVFFlat-test-same.cpp  2-IVFFlat-test.cpp  build.sh  run.sh  run_repeated.sh  run_test.sh  run_test_same.sh  visualize_latency.py
perf/perf-4-GPU-flat/: 4-GPU-flat-rep_dim_128_nb_1000000_k_4_latencies.csv  4-GPU-flat-rep_dim_960_nb_500000_iter_100_latencies.csv  4-GPU-flat-rep_dim_960_nb_500000_nq_3500_latencies.csv  4-GPU-flat_dim_128_batch_10000_k_4_latencies.csv  4-GPU-rep  4-GPU-repeated-same.cpp  4-GPU-repeated.cpp  4-GPU-test  4-GPU-test-mem-vary-nb.cpp  4-GPU-test-mem.cpp  4-GPU-test.cpp  build.sh  gpu_memory.hpp  run.sh  run_repeated.sh  run_repeated_same.sh  run_vary_nb.sh  visualize_latency.py  (+1 more)
tutorial/cpp/: 4-GPU.cpp  CMakeLists.txt  build.sh  check_nvidia_smi.sh  compile.sh
(+117 files in other folders)
